add fallback (aka default) update handler

--- a/gen/_template/handlers.tmpl
+++ b/gen/_template/handlers.tmpl
@@ -2,15 +2,16 @@
 {{ $pkg := $.Package }}
 {{ template "header" $ }}
 
-type handler = func(context.Context, Entities, UpdateClass) error
+type Handler = func(context.Context, Entities, UpdateClass) error
 
 type UpdateDispatcher struct {
-    handlers map[uint32]handler
+    handlers map[uint32]Handler
+	fallback Handler
 }
 
 func NewUpdateDispatcher() UpdateDispatcher {
     return UpdateDispatcher{
-        handlers: map[uint32]handler{},
+        handlers: map[uint32]Handler{},
     }
 }
 
@@ -71,10 +72,13 @@ func (u UpdateDispatcher) dispatch(ctx context.Context, e Entities, update Updat
     }
     typeID := update.TypeID()
     handler, ok := u.handlers[typeID]
-    if !ok {
-        return nil
-    }
-    return handler(ctx, e, update)
+	if ok {
+		return handler(ctx, e, update)
+	}
+	if u.fallback != nil {
+		return u.fallback(ctx, e, update)
+	}
+	return nil
 }
 
 {{- range $s := $.Structs }}{{ if eq $s.Interface "UpdateClass" }}
@@ -89,5 +93,10 @@ func (u UpdateDispatcher) On{{ $eventName }}(handler {{ $eventName }}Handler) {
     }
 }
 {{- end }}{{ end }}
+
+// OnFallback sets fallback handler.
+func (u *UpdateDispatcher) OnFallback(handler Handler) {
+    u.fallback = handler
+}
 
 {{ end }}
